--- a/src/components/AboutProject/AboutProject.css
+++ b/src/components/AboutProject/AboutProject.css
@@ -1,3 +1,37 @@
 .about-project {
-    height: 608px;
+    display: flex;
+    flex-direction: column;
+    padding-top: 110px;
+}
+
+.about-project__heading {
+    font-size: 22px;
+    font-weight: 400;
+    line-height: 27px;
+    margin: 0 0 23px 70px;
+}
+
+.about-project__container {
+    display: flex;
+    border-top: 1px black solid;
+    margin: 0 70px 0 70px;
+}
+
+.about-project__description {
+    display: flex;
+    margin: 70px 0 0 0;
+}
+
+.about-project__description-heading {
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 24px;
+    margin: 0;
+}
+
+.about-project__description-text {
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 20px;
+    margin: 26px 0 0 0;
 }
