--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,3 +1,40 @@
 .footer {
+    display: flex;
+    flex-direction: column;
+    margin: 0 70px 20px 70px;
+}
 
+.footer__heading {
+    font-size: 13px;
+    font-weight: 400;
+    margin: 79px 0 20px 0;
+    color: #A0A0A0;
+
+}
+
+.footer__container {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    border-top: 1px solid #E8E8E8;
+    padding: 20px 0 0 0;
+}
+
+.footer__date {
+    font-size: 13px;
+    font-weight: 400;
+    margin: 0;
+    color: black;
+}
+
+.footer__links {
+
+}
+
+.footer__link {
+    font-size: 13px;
+    font-weight: 400;
+    margin: 0;
+    color: black;
+    text-decoration: none;
 }
