--- a/src/components/Portfolio/Portfolio.css
+++ b/src/components/Portfolio/Portfolio.css
@@ -1,3 +1,25 @@
 .portfolio {
+    margin: 0 70px 0 70px;
+}
 
+.portfolio__heading {
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 20px;
+    color: #A0A0A0;
+    margin: 0;
+}
+
+.portfolio__link {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    font-size: 30px;
+    font-weight: 400;
+    line-height: 50px;
+    margin: 0;
+    padding-bottom: 19px;
+    border-bottom: 1px solid #E6E6E6;
+    color: black;
+    text-decoration: none;
 }
