--- a/src/components/Promo/Promo.css
+++ b/src/components/Promo/Promo.css
@@ -1,4 +1,21 @@
 .promo {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     height: 524px;
     background-color: #073042;
+    padding-top: 74px;
+    background-image: url("../../images/landing_logo.svg");
+    background-repeat: no-repeat;
+    background-position: center;
+}
+
+.promo__heading {
+    max-width: 730px;
+    margin: 0;
+    color: white;
+    font-size: 50px;
+    font-weight: 400;
+    line-height: 58px;
+    text-align: center;
 }
