--- a/src/components/Techs/Techs.css
+++ b/src/components/Techs/Techs.css
@@ -1,4 +1,59 @@
 .techs {
-    height: 625px;
+    display: flex;
+    flex-direction: column;
     background-color: #F5F5F5;
+}
+
+.techs__heading {
+    font-size: 22px;
+    font-weight: 400;
+    line-height: 27px;
+    margin: 100px 0 23px 70px;
+}
+
+.techs__container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border-top: 1px solid black;
+    margin: 0 70px 0 70px;
+}
+
+.techs__text {
+    font-size: 50px;
+    font-weight: 400;
+    line-height: 58px;
+    margin: 90px 0 0 0;
+}
+
+.techs__paragraph {
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 20px;
+    text-align: center;
+    margin: 26px 0 0 0;
+    max-width: 460px;
+}
+
+.techs__list {
+    margin: 100px 0;
+    padding: 0;
+    display: flex;
+    list-style: none;
+}
+
+.techs__list-item {
+    margin: 0 10px 0 0;
+    padding: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 0;
+    background-color: #E8E8E8;
+    height: 60px;
+    width: 90px;
+    text-align: center;
+    border-radius: 10px;
 }
