--- a/src/components/AboutProject/AboutProject.css
+++ b/src/components/AboutProject/AboutProject.css
@@ -13,6 +13,7 @@
 
 .about-project__container {
     display: flex;
+    flex-direction: column;
     border-top: 1px black solid;
     margin: 0 70px 0 70px;
 }
@@ -34,4 +35,59 @@
     font-weight: 400;
     line-height: 20px;
     margin: 26px 0 0 0;
+}
+
+.about_project__graph {
+    display: flex;
+    flex-direction: column;
+    margin: 110px 0;
+}
+
+.about_project__graph-container {
+    display: flex;
+    flex-direction: row;
+
+    align-items: center;
+}
+
+.about_project__graph-progress {
+    width: 20%;
+    background-color: #2BE080;
+    font-size: 14px;
+    font-weight: 400;
+    text-align: center;
+    height: 36px;
+}
+
+.about_project__graph-empty {
+    width: 80%;
+    background-color: #F2F2F2;
+    font-size: 14px;
+    font-weight: 400;
+    text-align: center;
+    height: 36px;
+}
+
+.about_project__graph-description {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.about_project__graph-description-frontend {
+    width: 20%;
+    font-size: 14px;
+    font-weight: 500;
+    line-height: 17px;
+    color: #A0A0A0;
+    text-align: center;
+}
+
+.about_project__graph-description-backend {
+    width: 80%;
+    font-size: 14px;
+    font-weight: 500;
+    line-height: 17px;
+    color: #A0A0A0;
+    text-align: center;
 }
