--- a/src/components/Portfolio/Portfolio.css
+++ b/src/components/Portfolio/Portfolio.css
@@ -7,7 +7,7 @@
     font-weight: 400;
     line-height: 20px;
     color: #A0A0A0;
-    margin: 0;
+    margin: 0 0 50px 0;
 }
 
 .portfolio__link {
