--- a/src/components/AboutMe/AboutMe.css
+++ b/src/components/AboutMe/AboutMe.css
@@ -38,6 +38,7 @@
 }
 
 .about-me__paragraph {
+    max-width: 660px;
     font-size: 16px;
     font-weight: 400;
     line-height: 22px;
@@ -51,6 +52,7 @@
     text-decoration: none;
     color: black;
     margin: 99px 0 0 0;
+    transition: 0.3s ease;
 }
 
 .about-me__image {
@@ -58,4 +60,9 @@
     width: 270px;
     background-color: #A0A0A0;
     border-radius: 10px;
+}
+
+.about-me__link:hover {
+    opacity: 0.5;
+    text-decoration: underline 1px black;
 }
