--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -39,4 +39,10 @@
     margin: 0 0 0 20px;
     color: black;
     text-decoration: none;
+    transition: 0.3s ease;
+
+}
+
+.footer__link:hover {
+    opacity: 0.5;
 }
