--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -20,4 +20,9 @@
 .header__logo-link {
     height: 38px;
     width: 38px;
+    transition: 0.3s ease;
+}
+
+.header__logo-link:hover {
+    opacity: 0.7;
 }
