--- a/src/components/MoviesCardList/MoviesCardList.css
+++ b/src/components/MoviesCardList/MoviesCardList.css
@@ -1,3 +1,32 @@
 .movies-card-list {
-    
+    display: flex;
+    flex-direction: column;
+    max-width: 1140px;
+    margin: 0 70px;
+    padding: 80px 0 0 0;
+}
+
+.movies-card-list__grid {
+    display: grid;
+    grid-gap: 20px;
+    justify-content: start;
+    grid-template-columns: repeat(auto-fit, minmax(270px, 1fr));
+}
+
+.movies-card-list__more {
+    width: 100%;
+    height: 36px;
+    margin: 50px 0 0 0;
+    background-color: #F5F5F5;
+    border: none;
+    border-radius: 6px;
+    font-size: 12px;
+    font-weight: 500;
+    text-align: center;
+    cursor: pointer;
+    transition: .1s ease-in;
+}
+
+.movies-card-list__more:hover {
+    opacity: 0.8;
 }
