--- a/src/components/NavTab/NavTab.css
+++ b/src/components/NavTab/NavTab.css
@@ -18,8 +18,13 @@
     text-decoration: none;
     border-bottom: 1px white solid;
     margin-right: 40px;
+    transition: 0.3s ease;
 }
 
 .nav-tab__link:last-of-type {
     margin-right: 0;
+}
+
+.nav-tab__link:hover {
+    opacity: 0.8;
 }
