--- a/src/components/Navigation/Navigation.css
+++ b/src/components/Navigation/Navigation.css
@@ -24,6 +24,7 @@
     font-size: 14px;
     font-weight: 400;
     line-height: 18px;
+    transition: 0.3s ease;
 }
 
 .navigation__link_active {
@@ -58,4 +59,8 @@
     height: 30px;
     width: 30px;
     margin: 0 0 0 13px;
+}
+
+.navigation__link:hover {
+    opacity: 0.7;
 }
