--- a/src/components/Portfolio/Portfolio.css
+++ b/src/components/Portfolio/Portfolio.css
@@ -17,9 +17,19 @@
     font-size: 30px;
     font-weight: 400;
     line-height: 50px;
-    margin: 0;
+    margin: 0 0 20px 0;
     padding-bottom: 19px;
     border-bottom: 1px solid #E6E6E6;
     color: black;
     text-decoration: none;
+    transition: transform 0.3s ease;
+}
+
+.portfolio__link:last-of-type {
+    margin: 0;
+}
+
+.portfolio__link:hover {
+    opacity: 0.5;
+    transform: translate(-2px, -2px);
 }
