--- a/src/components/SearchForm/SearchForm.css
+++ b/src/components/SearchForm/SearchForm.css
@@ -2,8 +2,9 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    padding: 154px 0 80px 0;
+    padding: 154px 0 83px 0;
     margin: 0 70px;
+    border-bottom: 1px solid #E8E8E8;
 }
 
 .search-form__search-bar {
@@ -17,7 +18,7 @@
     font-size: 14px;
     font-weight: 400;
     line-height: 17px;
-    color: #E8E8E8;
+    color: black;
     border: 1px solid #E8E8E8;
     border-radius: 40px;
     padding: 0 40px 0 22px;
@@ -37,6 +38,7 @@
     background-position: center;
     border: none;
     cursor: pointer;
+    transition: 0.3s ease;
 }
 
 .search-form__switch {
@@ -59,6 +61,7 @@
     display: inline-block;
     width: 36px;
     height: 20px;
+    transition: 0.3s ease;
 }
 
 .search-form__switch-input{
@@ -97,4 +100,12 @@
 
 .search-form__switch-input:checked + .search-form__switch-slider:before {
     transform: translateX(16px);
+}
+
+.search-form__switch-container:hover {
+    opacity: 0.7;
+}
+
+.search-form__button:hover {
+    opacity: 0.8;
 }
