--- a/src/pages/Register/Register.css
+++ b/src/pages/Register/Register.css
@@ -5,6 +5,11 @@
     align-items: center;
 }
 
+.register__container {
+    display: flex;
+    flex-direction: column;
+}
+
 .register__logo {
     height: 38px;
     width: 38px;
@@ -13,13 +18,13 @@
 .register__logo-link {
     height: 38px;
     width: 38px;
-    margin: 0 0 0 0;
+    margin: 0 auto 0 0;
 }
 
 .register__heading {
     font-size: 24px;
     font-weight: 500;
-    margin: 40px 0 0 0;
+    margin: 40px auto 0 0;
 }
 
 .register__form {
@@ -40,13 +45,14 @@
 }
 
 .register__form-input{
-    width: 396px;
-    height: 45px;
+    width: 364px;
+    height: 13px;
     background-color: #F2F2F2;
     border: none;
     border-radius: 3px;
-    color: white;
+    color: black;
     margin: 10px 0 0 0;
+    padding: 16px;
 }
 
 .register__form-submit {
@@ -64,7 +70,7 @@
     font-size: 14px;
     font-weight: 400;
     color: #A0A0A0;
-    margin: 16px 0 0 0;
+    margin: 16px auto 0;
 }
 
 .register__link {
