--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,13 +1,13 @@
 .footer {
     display: flex;
     flex-direction: column;
-    margin: 0 70px 20px 70px;
+    margin: 0 70px 20px;
 }
 
 .footer__heading {
     font-size: 13px;
     font-weight: 400;
-    margin: 79px 0 20px 0;
+    margin: 79px 0 20px;
     color: #A0A0A0;
     text-align: center;
 
@@ -18,7 +18,7 @@
     flex-direction: row;
     justify-content: space-between;
     border-top: 1px solid #E8E8E8;
-    padding: 20px 0 0 0;
+    padding: 20px 0 0;
 }
 
 .footer__date {
@@ -45,4 +45,42 @@
 
 .footer__link:hover {
     opacity: 0.5;
+}
+
+@media screen and (max-width: 769px) {
+    .footer {
+        margin: 0 30px 20px;
+    }
+}
+
+@media screen and (max-width: 431px) {
+    .footer {
+        margin: 0 18px 20px;
+    }
+
+    .footer__heading {
+        font-size: 12px;
+    }
+
+    .footer__container{
+        flex-direction: column-reverse;
+        align-items: center;
+        padding: 30px 0 0;
+    }
+
+    .footer__date {
+        font-size: 12px;
+        color: #A0A0A0;
+        margin: 30px auto 0;
+    }
+
+    .footer__links {
+        flex-direction: column;
+        align-items: center;
+        font-size: 12px;
+    }
+
+    .footer__link {
+        margin: 0 0 12px;
+    }
 }
