--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -26,3 +26,15 @@
 .header__logo-link:hover {
     opacity: 0.7;
 }
+
+@media screen and (max-width: 769px) {
+    .header__container {
+        margin: 18px 30px;
+    }
+}
+
+@media screen and (max-width: 431px) {
+    .header__container {
+        margin: 18px 14px;
+    }
+}
