--- a/src/components/NavTab/NavTab.css
+++ b/src/components/NavTab/NavTab.css
@@ -7,7 +7,7 @@
 }
 
 .nav-tab__links {
-
+    display: flex;
 }
 
 .nav-tab__link {
@@ -27,4 +27,10 @@
 
 .nav-tab__link:hover {
     opacity: 0.8;
+}
+
+@media screen and (max-width: 431px) {
+    .nav-tab__link {
+        margin-right: 24px;
+    }
 }
