--- a/src/components/Portfolio/Portfolio.css
+++ b/src/components/Portfolio/Portfolio.css
@@ -1,5 +1,5 @@
 .portfolio {
-    margin: 0 70px 0 70px;
+    margin: 0 70px 125px;
 }
 
 .portfolio__heading {
@@ -7,7 +7,7 @@
     font-weight: 400;
     line-height: 20px;
     color: #A0A0A0;
-    margin: 0 0 50px 0;
+    margin: 0 0 50px;
 }
 
 .portfolio__link {
@@ -32,4 +32,25 @@
 .portfolio__link:hover {
     opacity: 0.5;
     transform: translate(-2px, -2px);
+}
+
+@media screen and (max-width: 769px) {
+    .portfolio {
+        margin: 0 50px 90px;
+    }
+
+    .portfolio__link {
+        font-size: 28px;
+    }
+}
+
+@media screen and (max-width: 431px) {
+    .portfolio {
+        margin: 0 18px 40px;
+    }
+
+    .portfolio__link {
+        font-size: 18px;
+        line-height: 28px;
+    }
 }
