--- a/src/components/SearchForm/SearchForm.css
+++ b/src/components/SearchForm/SearchForm.css
@@ -1,7 +1,6 @@
 .search-form {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
     padding: 154px 0 83px 0;
     margin: 0 70px;
     border-bottom: 1px solid #E8E8E8;
@@ -10,11 +9,14 @@
 .search-form__search-bar {
     display: flex;
     position: relative;
+    margin: 0 41px 0 0;
+    width: 100%;
 }
 
 .search-form__input {
+    display: inline;
+    width: 100%;
     height: 48px;
-    width: 869px;
     font-size: 14px;
     font-weight: 400;
     line-height: 17px;
@@ -46,7 +48,6 @@
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    margin: 0 0 0 41px;
 }
 
 .search-form__heading {
@@ -108,4 +109,32 @@
 
 .search-form__button:hover {
     opacity: 0.8;
+}
+
+@media screen and (max-width: 769px) {
+    .search-form {
+        flex-direction: column;
+        padding: 130px 0 68px;
+        margin: 0 30px;
+    }
+
+    .search-form__switch {
+        justify-content: center;
+        margin: 37px auto 0;
+    }
+}
+
+@media screen and (max-width: 431px) {
+    .search-form {
+        padding: 114px 0 44px;
+        margin: 0 10px;
+    }
+
+    .search-form__switch {
+        margin: 44px auto 0;
+    }
+
+    .search-form__heading {
+        font-size: 11px;
+    }
 }
