--- a/src/components/Techs/Techs.css
+++ b/src/components/Techs/Techs.css
@@ -8,7 +8,7 @@
     font-size: 22px;
     font-weight: 400;
     line-height: 27px;
-    margin: 100px 0 23px 70px;
+    margin: 100px auto 23px 70px;
 }
 
 .techs__container {
@@ -16,14 +16,14 @@
     flex-direction: column;
     align-items: center;
     border-top: 1px solid black;
-    margin: 0 70px 0 70px;
+    margin: 0 70px;
 }
 
 .techs__text {
     font-size: 50px;
     font-weight: 400;
     line-height: 58px;
-    margin: 90px 0 0 0;
+    margin: 90px 0 0;
 }
 
 .techs__paragraph {
@@ -31,7 +31,7 @@
     font-weight: 400;
     line-height: 20px;
     text-align: center;
-    margin: 26px 0 0 0;
+    margin: 26px 0 0;
     max-width: 460px;
 }
 
@@ -39,11 +39,14 @@
     margin: 100px 0;
     padding: 0;
     display: flex;
+    align-items: center;
+    justify-content: center;
     list-style: none;
+    gap: 10px;
 }
 
 .techs__list-item {
-    margin: 0 10px 0 0;
+    margin: 0;
     padding: 0;
     display: flex;
     justify-content: center;
@@ -56,4 +59,70 @@
     width: 90px;
     text-align: center;
     border-radius: 10px;
+    transition: 0.5s ease;
+    cursor: default;
+}
+
+.techs__list-item:last-of-type {
+    margin: 0;
+}
+
+.techs__list-item:hover {
+    opacity: 0.5;
+}
+
+
+@media screen and (max-width: 769px) {
+    .techs__heading {
+        margin: 90px auto 23px 50px;
+    }
+
+    .techs__container {
+        margin: 0 50px;
+    }
+
+    .techs__text {
+        margin: 80px 0 0;
+    }
+
+    .techs__paragraph {
+        font-size: 14px;
+        margin: 22px 0 0;
+    }
+
+    .techs__list {
+        flex-wrap: wrap;
+        margin: 83px 0 90px;
+    }
+
+    .techs__list-item {
+        height: 57px;
+        width: 84px;
+        font-size: 12px;
+    }
+}
+
+@media screen and (max-width: 431px) {
+    .techs__heading {
+        margin: 70px auto 18px 28px;
+    }
+
+    .techs__container {
+        margin: 0 18px;
+    }
+
+    .techs__text {
+        font-size: 30px;
+        margin: 60px 0 0;
+    }
+
+    .techs__paragraph {
+        font-size: 11px;
+        line-height: 16px;
+        margin: 24px 0 0;
+    }
+
+    .techs__list {
+        margin: 50px 0 70px;
+    }
 }
