--- a/src/pages/Login/Login.css
+++ b/src/pages/Login/Login.css
@@ -19,6 +19,11 @@
     height: 38px;
     width: 38px;
     margin: 0 auto 0 0;
+    transition: 0.3s ease;
+}
+
+.login__logo-link:hover {
+    opacity: 0.7;
 }
 
 .login__heading {
@@ -55,6 +60,13 @@
     padding: 16px;
 }
 
+.login__form-error {
+    font-size: 10px;
+    font-weight: 400;
+    color: #FF004D;
+    margin: 10px auto 0 0;
+}
+
 .login__form-submit {
     width: 396px;
     height: 45px;
@@ -64,6 +76,11 @@
     color: white;
     cursor: pointer;
     margin: 69px 0 0 0;
+    transition: .3s ease;
+}
+
+.login__form-submit:hover {
+    opacity: 0.8;
 }
 
 .login__text {
@@ -78,4 +95,48 @@
     font-weight: 400;
     color: #3456F3;
     text-decoration: none;
+    transition: .3s ease;
+}
+
+.login__link:hover {
+    opacity: 0.8;
+}
+
+@media screen and (max-width: 769px) {
+    .login {
+        padding: 232px 0;
+        margin: 0 50px;
+    }
+}
+
+@media screen and (max-width: 431px) {
+    .login {
+        padding: 56px 0;
+        margin: 0 18px;
+    }
+
+    .login__heading {
+        margin: 50px auto 80px;
+    }
+
+    .login__container {
+        align-items: center;
+    }
+
+    .login__logo-link {
+        margin: 0 auto;
+    }
+
+    .login__form-input {
+        width: 228px;
+    }
+
+    .login__form-submit {
+        width: 260px;
+        margin: 157px 0 0;
+    }
+
+    .login__form-error {
+        margin: 14px auto 0 0;
+    }
 }
