--- a/src/pages/NotFound/NotFound.css
+++ b/src/pages/NotFound/NotFound.css
@@ -3,6 +3,7 @@
     flex-direction: column;
     align-items: center;
     padding: 246px 0;
+    margin: 0 auto;
 }
 
 .not-found__heading {
@@ -22,5 +23,31 @@
     font-weight: 400;
     color: #3456F3;
     text-decoration: none;
-    margin: 184px 0;
+    margin: 184px 0 0;
+}
+
+@media screen and (max-width: 769px) {
+    .not-found {
+        padding: 408px 0;
+    }
+}
+
+@media screen and (max-width: 431px) {
+    .not-found {
+        padding: 329px 0;
+    }
+
+    .not-found__heading {
+        font-size: 90px;
+        line-height: normal;
+    }
+
+    .not-found__text {
+        font-size: 12px;
+        margin: 10px 0 0;
+    }
+
+    .not-found__quit {
+        margin: 284px 0 0;
+    }
 }
