--- a/src/pages/Profile/Profile.css
+++ b/src/pages/Profile/Profile.css
@@ -2,13 +2,13 @@
     display: flex;
     flex-direction: column;
     padding: 74px 0;
+    margin: 0 70px;
 }
 
 .profile__container {
     display: flex;
     flex-direction: column;
     align-items: center;
-
 }
 
 .profile__heading {
@@ -21,6 +21,7 @@
     display: flex;
     flex-direction: column;
     width: 410px;
+    min-width: 260px;
     margin: 123px auto 220px;
 }
 
@@ -70,4 +71,45 @@
 
 .profile__quit:hover {
     opacity: 0.7;
+}
+
+@media screen and (max-width: 769px) {
+    .profile {
+        margin: 0 50px;
+    }
+
+    .profile__heading {
+        margin: 236px auto 0;
+    }
+
+    .profile__account {
+        margin: 96px auto 210px;
+        width: 100%;
+    }
+
+}
+
+@media screen and (max-width: 431px) {
+    .profile {
+        margin: 0 18px;
+    }
+
+
+    .profile__heading {
+        margin: 70px auto 0;
+    }
+
+    .profile__account {
+        margin: 80px auto 378px;
+        width: 100%;
+
+    }
+
+    .profile__edit {
+        font-size: 12px;
+    }
+
+    .profile__quit {
+        font-size: 12px;
+    }
 }
