--- a/src/pages/Register/Register.css
+++ b/src/pages/Register/Register.css
@@ -19,12 +19,17 @@
     height: 38px;
     width: 38px;
     margin: 0 auto 0 0;
+    transition: 0.3s ease;
+}
+
+.register__logo-link:hover {
+    opacity: 0.7;
 }
 
 .register__heading {
     font-size: 24px;
     font-weight: 500;
-    margin: 40px auto 0 0;
+    margin: 40px auto 40px 0;
 }
 
 .register__form {
@@ -36,6 +41,10 @@
     display: flex;
     flex-direction: column;
     margin: 20px 0 0 0;
+}
+
+.register__form-label:first-of-type {
+    margin: 0;
 }
 
 .register__form-text {
@@ -55,6 +64,13 @@
     padding: 16px;
 }
 
+.register__form-error {
+    font-size: 10px;
+    font-weight: 400;
+    color: #FF004D;
+    margin: 10px auto 0 0;
+}
+
 .register__form-submit {
     width: 396px;
     height: 45px;
@@ -63,7 +79,12 @@
     border-radius: 3px;
     color: white;
     cursor: pointer;
-    margin: 69px 0 0 0;
+    margin: 69px 0 0;
+    transition: .3s ease;
+}
+
+.register__form-submit:hover {
+    opacity: 0.8;
 }
 
 .register__text {
@@ -78,4 +99,48 @@
     font-weight: 400;
     color: #3456F3;
     text-decoration: none;
+    transition: 0.3s ease;
+}
+
+.register__link:hover {
+    opacity: 0.8;
+}
+
+@media screen and (max-width: 769px) {
+    .register {
+        padding: 232px 0;
+        margin: 0 50px;
+    }
+}
+
+@media screen and (max-width: 431px) {
+    .register {
+        padding: 56px 0;
+        margin: 0 18px;
+    }
+
+    .register__heading {
+        margin: 50px auto 80px;
+    }
+
+    .register__container {
+        align-items: center;
+    }
+
+    .register__logo-link {
+        margin: 0 auto;
+    }
+
+    .register__form-input {
+        width: 228px;
+    }
+
+    .register__form-submit {
+        width: 260px;
+        margin: 157px 0 0;
+    }
+
+    .register__form-error {
+        margin: 14px auto 0 0;
+    }
 }
