--- a/src/components/Promo/Promo.css
+++ b/src/components/Promo/Promo.css
@@ -2,10 +2,10 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 524px;
-    background-color: #073042;
-    padding-top: 74px;
-    background-image: url("../../images/landing_logo.svg");
+    height: 396px;
+    background-color: #F5F5F5;
+    margin: 96px 40px 0;
+    border-radius: 10px 10px 0 0;
     background-repeat: no-repeat;
     background-position: center;
 }
@@ -13,7 +13,7 @@
 .promo__heading {
     max-width: 730px;
     margin: 0;
-    color: white;
+    color: black;
     font-size: 50px;
     font-weight: 400;
     line-height: 58px;
@@ -22,9 +22,12 @@
 
 @media screen and (max-width: 769px) {
     .promo {
-        height: 784px;
+        height: 738px;
+        margin: 96px 20px 0;
     }
     .promo__heading {
+        font-size: 40px;
+        line-height: 52px;
         margin: 0 30px;
     }
 }
@@ -32,11 +35,12 @@
 @media screen and (max-width: 431px) {
     .promo {
         height: 570px;
+        margin: 88px 14px 0;
     }
 
     .promo__heading {
-        font-size: 31px;
-        line-height: 39px;
+        font-size: 29px;
+        line-height: 37px;
         margin: 0 10px;
     }
 }
