--- a/src/pages/NotFound/NotFound.css
+++ b/src/pages/NotFound/NotFound.css
@@ -21,7 +21,7 @@
 .not-found__quit {
     font-size: 14px;
     font-weight: 400;
-    color: #3456F3;
+    color: black;
     text-decoration: none;
     margin: 184px 0 0;
 }
