--- a/src/components/MoviesCardList/MoviesCardList.css
+++ b/src/components/MoviesCardList/MoviesCardList.css
@@ -14,9 +14,9 @@
 }
 
 .movies-card-list__more {
-    width: 100%;
+
     height: 36px;
-    margin: 50px 0 0 0;
+    margin: 50px 0 0;
     background-color: #F5F5F5;
     border: none;
     border-radius: 6px;
@@ -35,12 +35,20 @@
     .movies-card-list {
         margin: 0 50px;
         padding: 70px 0 0;
-}
+    }
+
+    .movies-card-list__more {
+        margin: 50px 62px 0;
+    }
 }
 
 @media screen and (max-width: 431px) {
     .movies-card-list {
-        margin: 0 18px;
+        margin: 0 10px;
         padding: 40px 0 0;
+    }
+
+    .movies-card-list__more {
+        margin: 50px 30px 0;
     }
 }
