--- a/src/components/NavTab/NavTab.css
+++ b/src/components/NavTab/NavTab.css
@@ -2,8 +2,10 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 66px;
-    background-color: black;
+    padding: 0 0 30px;
+    margin: 0 40px 0;
+    background-color: #F5F5F5;
+    border-radius: 0 0 10px 10px;
 }
 
 .nav-tab__links {
@@ -11,14 +13,21 @@
 }
 
 .nav-tab__link {
-    font-size: 13px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 12px;
     font-weight: 500;
     line-height: 16px;
     color: white;
     text-decoration: none;
-    border-bottom: 1px white solid;
-    margin-right: 40px;
+    margin-right: 10px;
     transition: 0.3s ease;
+    border-radius: 10px;
+    background-color: #E8E8E8;
+    width: 96px;
+    height: 36px;
+    text-align: center;
 }
 
 .nav-tab__link:last-of-type {
@@ -26,11 +35,25 @@
 }
 
 .nav-tab__link:hover {
-    opacity: 0.8;
+    background-color: black;
+}
+
+@media screen and (max-width: 769px) {
+    .nav-tab {
+        margin: 0 20px;
+    }
 }
 
 @media screen and (max-width: 431px) {
+    .nav-tab {
+        margin: 0 14px;
+        padding: 0 0 17px;
+    }
+
     .nav-tab__link {
-        margin-right: 24px;
+        font-size: 10px;
+        width: 82px;
+        height: 26px;
+        margin-right: 6px;
     }
 }
