--- a/src/components/Navigation/Navigation.css
+++ b/src/components/Navigation/Navigation.css
@@ -30,6 +30,11 @@
     font-size: 14px;
     font-weight: 400;
     line-height: 18px;
+    transition: .3s ease;
+}
+
+.navigation__link:hover {
+    opacity: 0.7;
 }
 
 .navigation__link_active {
@@ -38,7 +43,7 @@
 
 .navigation__link_auth {
     display: flex;
-    color: white;
+    color: black;
     font-size: 12px;
     font-weight: 500;
     line-height: 18px;
@@ -50,8 +55,8 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    color: black;
-    background-color: #2BE080;
+    color: white;
+    background-color: black;
     height: 32px;
     width: 76px;
     border-radius: 3px;
@@ -92,10 +97,6 @@
     height: 30px;
     width: 30px;
     margin: 0 0 0 13px;
-}
-
-.navigation__link:hover {
-    opacity: 0.7;
 }
 
 .burger-menu {
@@ -249,6 +250,20 @@
     width: 67%;
 }
 
+.overlay {
+    position: fixed;
+    display: none;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0,0,0,0.5);
+    z-index: 997;
+    cursor: pointer;
+}
+
 @media screen and (max-width: 769px) {
     .navigation__container {
         display: none;
@@ -271,6 +286,10 @@
 
 @media screen and (min-width: 769px) {
     .mobile-nav {
+        display: none;
+    }
+
+    .overlay {
         display: none;
     }
 }
