--- a/src/components/SearchForm/SearchForm.css
+++ b/src/components/SearchForm/SearchForm.css
@@ -1,7 +1,7 @@
 .search-form {
     display: flex;
     flex-direction: row;
-    padding: 154px 0 83px 0;
+    padding: 144px 0 69px 0;
     margin: 0 70px;
     border-bottom: 1px solid #E8E8E8;
 }
@@ -9,8 +9,21 @@
 .search-form__search-bar {
     display: flex;
     position: relative;
-    margin: 0 41px 0 0;
+    margin: 0;
     width: 100%;
+}
+
+.search-form__icon {
+    position: absolute;
+    left: 19px;
+    top: 50%;
+    transform: translateY(-50%);
+    width: 34px;
+    color: white;
+    background-color: transparent;
+    background-repeat: no-repeat;
+    background-position: center;
+
 }
 
 .search-form__input {
@@ -21,21 +34,28 @@
     font-weight: 400;
     line-height: 17px;
     color: black;
-    border: 1px solid #E8E8E8;
-    border-radius: 40px;
-    padding: 0 40px 0 22px;
+    border: none;
+    border-radius: 9px 0 0 9px;
+    background-color: #F5F5F5;
+    padding: 12px 30px 12px 63px;
+}
+
+.search-form__input:focus {
+    outline: none;
 }
 
 .search-form__button {
     position: absolute;
-    right: 7px;
+    right: 30px;
     top: 50%;
     transform: translateY(-50%);
     border-radius: 20px;
-    width: 34px;
+    width: 58px;
     height: 34px;
-    background-image: url("../../images/search_icon.svg");
-    background-color: #3456F3;
+    color: white;
+    font-size: 11px;
+    font-weight: 500;
+    background-color: black;
     background-repeat: no-repeat;
     background-position: center;
     border: none;
@@ -45,16 +65,30 @@
 
 .search-form__switch {
     display: flex;
+    position: relative;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
+    background-color: #F5F5F5;
+    border-radius: 0 9px 9px 0;
+    padding: 0 30px;
+
+}
+
+.search-form__switch:before {
+    border-left: 1px solid #E8E8E8;
+    content: "";
+    position: absolute;
+    left: 0;
+    height: 50px;
+    width: 50%;
 }
 
 .search-form__heading {
     font-size: 13px;
     font-weight: 400;
     line-height: 18px;
-    margin: 0 14px 0 0;
+    margin: 0 0 0 14px;
 }
 
 .search-form__switch-container {
@@ -113,28 +147,53 @@
 
 @media screen and (max-width: 769px) {
     .search-form {
-        flex-direction: column;
-        padding: 130px 0 68px;
+        padding: 154px 0 109px;
         margin: 0 30px;
     }
 
+}
+
+@media screen and (max-width: 584px) {
+    .search-form {
+        padding: 154px 0 44px;
+        flex-direction: column;
+    }
+
+    .search-form__input {
+        border-radius: 9px;
+    }
+
     .search-form__switch {
-        justify-content: center;
-        margin: 37px auto 0;
+        margin: 44px auto 0;
+        background-color: transparent;
+        border-radius: 0;
+        padding: 0;
+        border-left: none;
+    }
+
+    .search-form__switch:before {
+        content: none;
     }
 }
 
 @media screen and (max-width: 431px) {
     .search-form {
-        padding: 114px 0 44px;
         margin: 0 10px;
     }
 
-    .search-form__switch {
-        margin: 44px auto 0;
+    .search-form__input {
+        padding: 12px 19px 12px 19px;
     }
 
     .search-form__heading {
         font-size: 11px;
+    }
+
+    .search-form__icon {
+        display: none;
+    }
+
+    .search-form__button {
+        right: 19px;
     }
 }
