--- a/src/pages/Login/Login.css
+++ b/src/pages/Login/Login.css
@@ -29,7 +29,7 @@
 .login__heading {
     font-size: 24px;
     font-weight: 500;
-    margin: 40px auto 0 0;
+    margin: 40px auto 40px 0;
 }
 
 .login__form {
@@ -41,6 +41,10 @@
     display: flex;
     flex-direction: column;
     margin: 20px 0 0 0;
+}
+
+.login__form-label:first-of-type {
+    margin: 0;
 }
 
 .login__form-text {
@@ -70,7 +74,7 @@
 .login__form-submit {
     width: 396px;
     height: 45px;
-    background-color: #3456F3;
+    background-color: black;
     border: none;
     border-radius: 3px;
     color: white;
@@ -93,7 +97,7 @@
 .login__link {
     font-size: 14px;
     font-weight: 400;
-    color: #3456F3;
+    color: black;
     text-decoration: none;
     transition: .3s ease;
 }
