--- a/src/pages/Register/Register.css
+++ b/src/pages/Register/Register.css
@@ -74,7 +74,7 @@
 .register__form-submit {
     width: 396px;
     height: 45px;
-    background-color: #3456F3;
+    background-color: black;
     border: none;
     border-radius: 3px;
     color: white;
@@ -97,7 +97,7 @@
 .register__link {
     font-size: 14px;
     font-weight: 400;
-    color: #3456F3;
+    color: black;
     text-decoration: none;
     transition: 0.3s ease;
 }
