fix: bugfix after review

--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,7 @@
 @import url(./vendor/normalize.css);
 @import url(./vendor/fonts/fonts.css);
 
-
+html {
+    scroll-behavior: smooth;
+    scrollbar-gutter: stable;
+}
