--- a/src/components/AboutMe/AboutMe.css
+++ b/src/components/AboutMe/AboutMe.css
@@ -58,8 +58,8 @@
 }
 
 .about-me__image {
-    max-height: 327px;
-    min-width: 270px;
+    height: 327px;
+    width: 270px;
     background-color: #A0A0A0;
     border-radius: 10px;
     object-fit: cover;
@@ -103,8 +103,8 @@
     }
 
     .about-me__image {
-        max-height: 307px;
-        min-width: 255px;
+        height: 307px;
+        width: 255px;
     }
 }
 
