--- a/src/components/Navigation/Navigation.css
+++ b/src/components/Navigation/Navigation.css
@@ -128,7 +128,7 @@
     height: 100vh;
     background-color: white;
     overflow-x: hidden;
-    transition: 0.3s;
+    transition: .3s;
     z-index: 999;
 }
 
@@ -251,17 +251,22 @@
 }
 
 .overlay {
-    position: fixed;
-    display: none;
     width: 100%;
-    height: 100%;
+    min-height: 100%;
+    position: fixed;
+    display: flex;
+    background: rgba(0, 0, 0, .5);
     top: 0;
     left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: rgba(0,0,0,0.5);
+    opacity: 0;
+    transition: visibility .3s linear,opacity .3s linear;
+    visibility: hidden;
     z-index: 997;
-    cursor: pointer;
+}
+
+.overlay_active {
+    opacity: 1;
+    visibility: visible;
 }
 
 @media screen and (max-width: 769px) {
@@ -284,7 +289,7 @@
     }
 }
 
-@media screen and (min-width: 769px) {
+@media screen and (min-width: 770px) {
     .mobile-nav {
         display: none;
     }
