--- a/src/pages/NotFound/NotFound.css
+++ b/src/pages/NotFound/NotFound.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 246px 0;
+    padding: 246px 0 0;
     margin: 0 auto;
 }
 
@@ -28,13 +28,13 @@
 
 @media screen and (max-width: 769px) {
     .not-found {
-        padding: 408px 0;
+        padding: 408px 0 0;
     }
 }
 
 @media screen and (max-width: 431px) {
     .not-found {
-        padding: 329px 0;
+        padding: 329px 0 0;
     }
 
     .not-found__heading {
