--- a/src/pages/Register/Register.css
+++ b/src/pages/Register/Register.css
@@ -64,6 +64,18 @@
     padding: 16px;
 }
 
+.register__form-input:focus {
+    outline: 2px solid black;
+}
+
+.register__form-input:hover {
+    outline: 2px solid #A0A0A0;
+}
+
+.register__form-input:focus:hover {
+    outline: 2px solid black;
+}
+
 .register__form-error {
     font-size: 10px;
     font-weight: 400;
@@ -72,6 +84,8 @@
 }
 
 .register__form-submit {
+    font-size: 14px;
+    font-weight: 500;
     width: 396px;
     height: 45px;
     background-color: black;
@@ -79,7 +93,7 @@
     border-radius: 3px;
     color: white;
     cursor: pointer;
-    margin: 69px 0 0;
+    margin: 74px 0 0;
     transition: .3s ease;
 }
 
@@ -95,7 +109,6 @@
 }
 
 .register__link {
-    font-size: 14px;
     font-weight: 400;
     color: black;
     text-decoration: none;
@@ -108,14 +121,14 @@
 
 @media screen and (max-width: 769px) {
     .register {
-        padding: 232px 0;
+        padding: 232px 0 0;
         margin: 0 50px;
     }
 }
 
 @media screen and (max-width: 431px) {
     .register {
-        padding: 56px 0;
+        padding: 56px 0 0;
         margin: 0 18px;
     }
 
@@ -136,11 +149,16 @@
     }
 
     .register__form-submit {
+        font-size: 12px;
         width: 260px;
-        margin: 157px 0 0;
+        margin: 158px 0 0;
     }
 
     .register__form-error {
         margin: 14px auto 0 0;
+    }
+
+    .register__text {
+        font-size: 12px;
     }
 }
