--- a/src/components/AboutProject/AboutProject.css
+++ b/src/components/AboutProject/AboutProject.css
@@ -54,6 +54,7 @@
     display: flex;
     flex-direction: column;
     margin: 110px 0;
+    cursor: default;
 }
 
 .about_project__graph-bar {
@@ -74,6 +75,12 @@
     color: white;
 }
 
+.about_project__graph-progress:hover {
+    transition: .1s ease;
+    transform: scale(102%);
+    opacity: 0.7;
+}
+
 .about_project__graph-empty {
     width: 80%;
     background-color: #F2F2F2;
@@ -82,6 +89,11 @@
     text-align: center;
     margin: 0 auto;
     padding: 9px 0;
+}
+
+.about_project__graph-empty:hover {
+    transition: .1s ease;
+    opacity: 0.7;
 }
 
 .about_project__graph-description {
