--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -4,7 +4,6 @@
     width: 100%;
     position: absolute;
     top: 0;
-
 }
 
 .header__container {
@@ -27,6 +26,10 @@
 
 .header__logo-link:hover {
     opacity: 0.7;
+}
+
+.header__logo-link:active {
+    transform: translateY(4px);
 }
 
 @media screen and (max-width: 769px) {
