--- a/src/components/MoviesCard/MoviesCard.css
+++ b/src/components/MoviesCard/MoviesCard.css
@@ -70,6 +70,10 @@
     filter: brightness(110%);
 }
 
+.movies-card:active {
+    transform: translateY(4px);
+}
+
 .movies-card__like-button:hover {
     opacity: 0.5;
 }
