--- a/src/components/NavTab/NavTab.css
+++ b/src/components/NavTab/NavTab.css
@@ -38,6 +38,10 @@
     background-color: black;
 }
 
+.nav-tab__link:active {
+    transform: translateY(4px);
+}
+
 @media screen and (max-width: 769px) {
     .nav-tab {
         margin: 0 20px;
