--- a/src/index.css
+++ b/src/index.css
@@ -5,3 +5,21 @@ html {
     scroll-behavior: smooth;
     scrollbar-gutter: stable;
 }
+
+body::-webkit-scrollbar {
+    width: .5em;
+    transition: .1s ease;
+}
+
+body::-webkit-scrollbar-track {
+    background: #E8E8E8;
+}
+
+body::-webkit-scrollbar-thumb {
+    background: black;
+    border-radius: 10px;
+}
+
+body::-webkit-scrollbar-thumb:hover {
+    background: #A0A0A0;
+}
