--- a/src/pages/Login/Login.css
+++ b/src/pages/Login/Login.css
@@ -26,6 +26,10 @@
     opacity: 0.7;
 }
 
+.login__logo-link:active {
+    transform: translateY(4px);
+}
+
 .login__heading {
     font-size: 24px;
     font-weight: 500;
@@ -72,7 +76,7 @@
 }
 
 .login__form-input:hover {
-    outline: 2px solid #A0A0A0;
+    outline: 1px solid #A0A0A0;
 }
 
 .login__form-input:focus:hover {
@@ -102,6 +106,10 @@
 
 .login__form-submit:hover {
     opacity: 0.8;
+}
+
+.login__form-submit:active {
+    transform: translateY(4px);
 }
 
 .login__text {
