--- a/src/components/MovieCard/MovieCard.css
+++ b/src/components/MovieCard/MovieCard.css
@@ -57,6 +57,21 @@
     transition: .1s ease-in;
 }
 
+.movies-card__delete-button {
+    background-color: #F5F5F5;
+    background-image: url("../../images/delete-button.svg");
+    background-repeat: no-repeat;
+    background-position: center;
+    border: none;
+    height: 24px;
+    width: 24px;
+    padding: 0;
+    margin: 0;
+    border-radius: 36px;
+    cursor: pointer;
+    transition: .1s ease-in;
+}
+
 .movies-card__like-button_active {
     background-image: url("../../images/like-button_active.svg");
 }
@@ -75,6 +90,10 @@
 }
 
 .movies-card__like-button:hover {
+    opacity: 0.5;
+}
+
+.movies-card__delete-button:hover {
     opacity: 0.5;
 }
 
