--- a/src/components/Preloader/Preloader.css
+++ b/src/components/Preloader/Preloader.css
@@ -46,7 +46,15 @@
     width: 100%;
     height: 100%;
     z-index: 10;
-    padding: 20px;
+    padding: 20px 0;
+    margin: 100px auto 21px;
+}
+
+.preloader_full-screen {
+    position: fixed;
+    top: 0;
+    left: 0;
+    padding: 0;
 }
 
 .preloader__container {
