--- a/src/pages/Movies/Movies.css
+++ b/src/pages/Movies/Movies.css
@@ -2,3 +2,12 @@
     display: flex;
     flex-direction: column;
 }
+
+.movies__loading {
+    max-width: 1000px;
+    font-size: 26px;
+    font-weight: 500;
+    text-align: center;
+    margin: 100px auto 21px;
+    color: black;
+}
