--- a/src/pages/Profile/Profile.css
+++ b/src/pages/Profile/Profile.css
@@ -48,11 +48,38 @@
     margin: 0;
 }
 
+.profile__account-info-input {
+    font-size: 11px;
+    color: black;
+    text-align: right;
+    text-decoration: none;
+    border: none;
+    border-bottom: 1px solid #A0A0A0;
+    background: none;
+}
+
+.profile__account-info-input:focus {
+    border-bottom: 1px solid black;
+    outline: none;
+}
+
+.profile__account-info-input:hover {
+    border-bottom: 1px solid #A0A0A0;
+}
+
+.profile__account-info-input:focus:hover {
+    border-bottom: 1px solid black;
+    outline: none;
+}
+
 .profile__edit {
     font-size: 13px;
     font-weight: 400;
+    color: black;
     margin: 0 auto;
     cursor: pointer;
+    border: none;
+    background: none;
     transition: 0.3s ease;
 }
 
@@ -62,8 +89,39 @@
     margin: 16px auto 0;
     color: #FF004D;
     text-decoration: none;
+    border: none;
+    background: none;
     transition: 0.3s ease;
+    cursor: pointer;
 }
+
+.profile__submit {
+    font-size: 14px;
+    font-weight: 500;
+    width: 396px;
+    height: 45px;
+    background-color: black;
+    border: none;
+    border-radius: 3px;
+    color: white;
+    cursor: pointer;
+    margin: 0;
+    transition: .3s ease;
+}
+
+.profile__submit_disabled {
+    background-color: #ccc;
+    cursor: not-allowed;
+}
+
+.profile__submit:hover {
+    opacity: 0.8;
+}
+
+.profile__submit:active {
+    transform: translateY(4px);
+}
+
 
 .profile__edit:hover {
     opacity: 0.7;
@@ -71,6 +129,15 @@
 
 .profile__quit:hover {
     opacity: 0.7;
+}
+
+.profile__form-error {
+    height: 12px;
+    font-size: 10px;
+    font-weight: 400;
+    color: #FF004D;
+    margin: 10px auto 0;
+    text-align: center;
 }
 
 @media screen and (max-width: 769px) {
