--- a/src/pages/NotFound/NotFound.css
+++ b/src/pages/NotFound/NotFound.css
@@ -24,6 +24,14 @@
     color: black;
     text-decoration: none;
     margin: 184px 0 0;
+    background: none;
+    border: none;
+    cursor: pointer;
+    transition: .3s ease;
+}
+
+.not-found__quit:hover {
+    opacity: 0.7;
 }
 
 @media screen and (max-width: 769px) {
