--- a/src/pages/Profile/Profile.css
+++ b/src/pages/Profile/Profile.css
@@ -91,7 +91,7 @@
     text-decoration: none;
     border: none;
     background: none;
-    transition: 0.3s ease;
+    transition: .3s ease;
     cursor: pointer;
 }
 
